# OpenGL

./: CMakeLists.txt  README.md  generate_resources.py
include/base64/: base64.h
include/glad/: glad.h
include/src/: glad.c
include/stb_image/: stb_image.h
src/: CMakeLists.txt  config.h  globals.h  main.cpp
src/callbacks/: CMakeLists.txt
src/callbacks/keyboard/: CMakeLists.txt  keyboard.h
src/callbacks/mouse/: CMakeLists.txt  mouse_callback.h
src/keyboard/: keyboard.h
src/mouse/: CMakeLists.txt  getMouse.h  mouse_callback.h
src/mouse/mouse_callback/: mouse_callback.h
src/mouse/mouse_position/: CMakeLists.txt  get_mouse_position.h
src/render/: CMakeLists.txt  setupRenderer.h
src/render/imGui/: CMakeLists.txt  debug_imgui.h
src/render/scene/: CMakeLists.txt  render_scene.h
src/render/scene/structures/: CMakeLists.txt
src/render/scene/structures/cube/: CMakeLists.txt  cube_struct.h
src/render/scene/structures/plane/: CMakeLists.txt  plane.h  plane_struct.h
src/render/scene/structures/vertex/: CMakeLists.txt  vertex.h
src/render/setup/: CMakeLists.txt  setupRenderer.h
src/render/shader/: CMakeLists.txt  shader.h
src/render/text/: CMakeLists.txt  text_renderer.cpp  text_renderer.h
src/render/texture/: CMakeLists.txt  texture.h
src/render/vertex/: vertex.h
